@@ -37,6 +37,19 @@
 #include <unistd.h>
 #endif
 
+
+#ifndef O_BINARY
+#define O_BINARY 0
+#endif
+
+#ifndef S_IRGRP
+#define S_IRGRP 0
+#endif
+
+#ifndef S_IROTH
+#define S_IROTH 0
+#endif
+
 // Fix for VC6
 #ifndef S_IREAD
 #ifdef _S_IREAD
@@ -363,6 +376,12 @@ int FileMgr::createParent(const char *pName) {
 	return retCode;
 }
 	
+
+int FileMgr::openFileReadOnly(const char *fName) {
+	int fd = ::open(fName, O_RDONLY|O_BINARY, S_IREAD|S_IWRITE|S_IRGRP|S_IROTH);
+	return fd;
+}
+
 
 int FileMgr::createPathAndFile(const char *fName) {
 	int fd;
